change file css and js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
-  
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/style.css"/>
@@ -230,7 +231,7 @@
                   </div>
               </div>              
               <div class="about__present-text slide-in-right">
-                <h3>Modern Perfume Production</h3>
+                <h3>Modern Perfume<br> Production</h3>
                 <div class="about__present-iris-box about__present-right">
                   <div class="about__present-iris">
                     <img class="about-img" src="./images/about-slider/Main2.jpg" alt="">
@@ -729,7 +730,7 @@
               </div>
 
       <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-      <script src="js/main.js"></script>
+      <script src="js/main.js" defer></script>
       <script src="js/order.js"></script>
 </body>
 </html>
